# flutter_lua_vm

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_lua_vm/: FlutterLuaVmPlugin.kt
android/src/test/kotlin/com/example/flutter_lua_vm/: FlutterLuaVmPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_lua_vm_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_lua_vm.podspec
ios/Classes/: FlutterLuaVmPlugin.swift
lib/: LuaVM.dart  flutter_lua_vm.dart  flutter_lua_vm_method_channel.dart  flutter_lua_vm_platform_interface.dart  lua_task_handler.dart  lua_vm.dart
linux/: CMakeLists.txt  flutter_lua_vm_plugin.cc  flutter_lua_vm_plugin_private.h
linux/include/flutter_lua_vm/: flutter_lua_vm_plugin.h
linux/test/: flutter_lua_vm_plugin_test.cc
macos/: flutter_lua_vm.podspec
macos/Classes/: FlutterLuaVmPlugin.swift
src/: lua_vm.c  lua_vm.h  task_manager.c  task_manager.h
test/: flutter_lua_vm_method_channel_test.dart  flutter_lua_vm_test.dart  lua_vm_test.dart
windows/: CMakeLists.txt  flutter_lua_vm_plugin.cpp  flutter_lua_vm_plugin.h  flutter_lua_vm_plugin_c_api.cpp
windows/include/flutter_lua_vm/: flutter_lua_vm_plugin_c_api.h
windows/test/: flutter_lua_vm_plugin_test.cpp
